more problem and changed the template

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,13 @@
         "iostream": "cpp",
         "algorithm": "cpp",
         "initializer_list": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "istream": "cpp",
+        "memory": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
+        "xlocnum": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
